# osla_aduana

./: .gitignore  AGENTS.md  pyproject.toml
docs/: ADUANA_2026_OFFLINE_RUNTIME.md  ADUANA_CORE_GUARDRAILS_RUNTIME.md  ADUANA_OFFLINE_GUARDRAILS_SMOKE.md  ADUANA_RUNTIME_HANDOFF_2026_05_07.md  ADUANA_S3_POST_CORE_HANDOFF_2026_05_07.md  ADUANA_S6_PROCESSING_GO_REQUEST.md  ADUANA_S7_GO_CONTRACT_ALIGNMENT_HANDOFF_2026_05_08.md  ADUANA_V3_Q_TECHNICAL_READINESS.md  ADUANA_V3_R_FIXTURES_POLICY.md  ADUANA_V3_R_OFFLINE_CONTRACTS.md  ADUANA_V3_S_FIXTURES.md  ADUANA_V3_S_VALIDATORS.md  Investigaciones.md  Producto.md  ROADMAP.md  V3_RECONCILIATION_TODO.md
docs/v3_canonical/: README.md  aduana__chatgpt_29_04_2026_v3.md  agentsaduana_v3.md  productoaduana_v3.md  roadmapaduana_v3.md
fixtures/v3_s/: docintel_missing_requirements.json  evidence_items.json  index.json  regimen_engine_scenarios.json  source_manifests.json  trade_cases.json  voxbridge_followups.json
src/osla_aduana/: __init__.py  core_guardrails.py  get_only_demo.py  offline_runtime.py  offline_smoke.py
tests/: test_get_only_demo.py  test_offline_runtime.py  test_offline_smoke.py  test_v3_s_fixtures_policy.py
