[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osla-aduana"
version = "0.1.0"
description = "Offline Aduana runtime contracts for OSLA"
requires-python = ">=3.12"
dependencies = [
    "osla-core @ git+https://github.com/tinchopmanya/osla-core.git@0dee8c3c5adf7de8f0452e47853fb55fc412d0f5",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.2"]

[project.scripts]
osla-aduana-core-guardrails-smoke = "osla_aduana.offline_smoke:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
