[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osla-aduana"
version = "0.1.0"
description = "Offline Aduana runtime contracts for OSLA"
requires-python = ">=3.12"
dependencies = [
    "osla-core @ git+https://github.com/tinchopmanya/osla-core.git@07fb9924d43d96440e25b13c331a12f37d3c49c5",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.2"]

[project.scripts]
osla-aduana-core-guardrails-smoke = "osla_aduana.offline_smoke:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
