[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osla-aduana"
version = "0.1.0"
description = "Offline Aduana runtime contracts for OSLA"
requires-python = ">=3.12"
dependencies = [
    "osla-core @ git+https://github.com/tinchopmanya/osla-core.git@02cd169c669d0ccb911d6ef6f7b9445f7deca51b",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.2"]

[project.scripts]
osla-aduana-core-guardrails-smoke = "osla_aduana.offline_smoke:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
